--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "jeremeamia/superclosure": "~2.0",
-        "tijsverkoyen/css-to-inline-styles": "~1.2"
+        "tijsverkoyen/css-to-inline-styles": "~1.2",
+        "cboden/ratchet": "0.3.*"
     }
 }
